--- a/projects.html
+++ b/projects.html
@@ -283,7 +283,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="split-flap-display.html" class="back-link">← Back</a>
+        <a href="index.html" class="back-link">← Back</a>
 
         <div class="header">
             <h1>PROJECTS</h1>
@@ -554,7 +554,7 @@
                     }, index * 50);
                 }
             });
-        }, 500);
+        }, 200);
 
         // Project sorting functionality
         const filterButtons = document.querySelectorAll('.filter-btn');
