--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Split-Flap Display</title>
+    <title>matthew h zhang</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Doto:wght@900&display=swap" rel="stylesheet">
@@ -109,7 +109,7 @@
 
         .nav-links a:nth-child(2) {
             margin-right: auto;
-            margin-left: 20px;
+            margin-left: 0px;
         }
 
         .nav-links a:last-child {
@@ -257,7 +257,7 @@
         <div class="container" id="display"></div>
         <div class="nav-links" id="navLinks">
             <a href="projects.html">projects</a>
-            <a href="#other">other</a>
+            <a href="#other">about me</a>
             <a href="https://ecb.utexas.edu/" target="_blank">ut austin ecb</a>
         </div>
     </div>
