--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Matthew H Zhang</title>
+    <title>projects - matthew zhang</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Doto:wght@900&display=swap" rel="stylesheet">
@@ -361,13 +361,13 @@
             <!-- Project 1 -->
             <div class="project" data-date="2025-11-08" data-name="Project Title 1" data-progress="Complete">
                 <a href="#project1">
-                    <div class="project-title">Project Title 1</div>
+                    <div class="project-title">Wall Projector Pen</div>
                     <div class="project-image">
                         <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='150'%3E%3Crect fill='%23f0f0f0' width='200' height='150'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Arial' font-size='14' fill='%23999'%3EProject Image%3C/text%3E%3C/svg%3E" alt="Project 1">
                     </div>
-                    <div class="project-progress">Progress: Complete</div>
-                    <div class="project-description">Brief description of the project</div>
-                    <div class="project-date">8 Nov 2025</div>
+                    <div class="project-progress">Progress: Complete?</div>
+                    <div class="project-description">Wished my whiteboard were larger</div>
+                    <div class="project-date">19 Oct 2025</div>
                 </a>
             </div>
 
