--- a/projects.html
+++ b/projects.html
@@ -363,9 +363,9 @@
                 <a href="#project1">
                     <div class="project-title">Wall Projector Pen</div>
                     <div class="project-image">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='150'%3E%3Crect fill='%23f0f0f0' width='200' height='150'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Arial' font-size='14' fill='%23999'%3EProject Image%3C/text%3E%3C/svg%3E" alt="Project 1">
+                        <img src="lightpen.jpeg" alt="Wall Projector Pen">
                     </div>
-                    <div class="project-progress">Progress: Complete?</div>
+                    <div class="project-progress">Progress: Complete</div>
                     <div class="project-description">Wished my whiteboard were larger</div>
                     <div class="project-date">19 Oct 2025</div>
                 </a>
