--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
             z-index: -1;
         }
 
-        .nav-links a:hover {
-            color: #666666;
+        .nav-links a:not(:last-child):hover {
+            color: #FEC94A;
             text-shadow:
-                1px 0 0 rgba(102, 102, 102, 1),
-                -1px 0 0 rgba(102, 102, 102, 1),
-                0 1px 0 rgba(102, 102, 102, 1),
-                0 -1px 0 rgba(102, 102, 102, 1);
+                1px 0 0 rgba(254, 201, 74, 1),
+                -1px 0 0 rgba(254, 201, 74, 1),
+                0 1px 0 rgba(254, 201, 74, 1),
+                0 -1px 0 rgba(254, 201, 74, 1);
         }
 
         .nav-links a:hover::before {
@@ -113,26 +113,26 @@
         }
 
         .nav-links a:last-child {
-            color: #ff7847;
+            color: #FEC94A;
             margin-right: 19px;
             text-shadow:
-                1px 0 0 rgba(255, 120, 71, 1),
-                -1px 0 0 rgba(255, 120, 71, 1),
-                0 1px 0 rgba(255, 120, 71, 1),
-                0 -1px 0 rgba(255, 120, 71, 1);
+                1px 0 0 rgba(254, 201, 74, 1),
+                -1px 0 0 rgba(254, 201, 74, 1),
+                0 1px 0 rgba(254, 201, 74, 1),
+                0 -1px 0 rgba(254, 201, 74, 1);
         }
 
         .nav-links a:last-child::before {
-            background-color: #ff7847;
+            background-color: #FEC94A;
         }
 
         .nav-links a:last-child:hover {
-            color: #ff4500;
+            color: #FEC94A;
             text-shadow:
-                1px 0 0 rgba(255, 69, 0, 1),
-                -1px 0 0 rgba(255, 69, 0, 1),
-                0 1px 0 rgba(255, 69, 0, 1),
-                0 -1px 0 rgba(255, 69, 0, 1);
+                1px 0 0 rgba(254, 201, 74, 1),
+                -1px 0 0 rgba(254, 201, 74, 1),
+                0 1px 0 rgba(254, 201, 74, 1),
+                0 -1px 0 rgba(254, 201, 74, 1);
         }
 
         .container {
