swap lightpen image

--- a/projects.html
+++ b/projects.html
@@ -369,7 +369,7 @@
                 <a href="#project1">
                     <div class="project-title">Wall Projector Pen</div>
                     <div class="project-image">
-                        <img src="lightpen.jpeg" alt="Wall Projector Pen">
+                        <img src="lightpenv2.png" alt="Wall Projector Pen">
                     </div>
                     <div class="project-progress">Progress: Complete</div>
                     <div class="project-description">Wished my whiteboard were larger</div>
