new open for project

--- a/projects.html
+++ b/projects.html
@@ -366,7 +366,7 @@
         <div class="projects-grid" id="projectsGrid">
             <!-- Project 1 -->
             <div class="project" data-date="2025-11-08" data-name="Project Title 1" data-progress="Complete">
-                <a href="#project1">
+                <a href="https://matthewhzhang.notion.site/ebd//303ce3e0547e80b5998bf7148dd8f1b8">
                     <div class="project-title">Wall Projector Pen</div>
                     <div class="project-image">
                         <img src="lightpenv2.png" alt="Wall Projector Pen">
