fix project button bg

--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
         }
 
         body {
-            background: #ffffff;
+            background: #f2f2f2;
             font-family: Arial, sans-serif;
             padding: 40px 20px;
         }
@@ -158,7 +158,12 @@
             display: flex;
             justify-content: center;
             gap: 30px;
-            margin-bottom: 50px;
+            margin: 0 auto 50px;
+            width: 100vw;
+            margin-left: 50%;
+            transform: translateX(-50%);
+            background: rgba(160, 160, 160, 0.3);
+            padding: 16px 20px;
         }
 
         .filter-btn {
