--- a/projects.html
+++ b/projects.html
@@ -192,9 +192,9 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: #FEC94A;
+            background-color: transparent;
             border-radius: 8px;
-            opacity: 0.18;
+            opacity: 0;
             transition: opacity 0.3s ease;
             z-index: -1;
         }
@@ -209,7 +209,7 @@
         }
 
         .filter-btn:hover::before {
-            opacity: 0.18;
+            opacity: 0;
         }
 
         .filter-btn.active {
@@ -222,7 +222,7 @@
         }
 
         .filter-btn.active::before {
-            opacity: 0.18;
+            opacity: 0;
         }
 
         .projects-grid {
