--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
         }
 
         body {
-            background: #f2f2f2;
+            background: white;
             font-family: Arial, sans-serif;
             padding: 40px 20px;
         }
@@ -159,11 +159,10 @@
             justify-content: center;
             gap: 30px;
             margin: 0 auto 50px;
-            width: 100vw;
-            margin-left: 50%;
-            transform: translateX(-50%);
+            width: fit-content;
             background: rgba(160, 160, 160, 0.3);
-            padding: 16px 20px;
+            padding: 10px 14px;
+            border-radius: 10px;
         }
 
         .filter-btn {
