--- a/projects.html
+++ b/projects.html
@@ -158,10 +158,10 @@
             display: flex;
             justify-content: center;
             gap: 22px;
-            margin: 0 auto 40px;
+            margin: -4px auto 36px;
             width: fit-content;
             background: rgba(160, 160, 160, 0.3);
-            padding: 8px 12px;
+            padding: 8px 26px;
             border-radius: 8px;
         }
 
