--- a/projects.html
+++ b/projects.html
@@ -212,12 +212,12 @@
         }
 
         .filter-btn.active {
-            color: #FEC94A;
+            color: #444444;
             text-shadow:
-                1px 0 0 rgba(254, 201, 74, 1),
-                -1px 0 0 rgba(254, 201, 74, 1),
-                0 1px 0 rgba(254, 201, 74, 1),
-                0 -1px 0 rgba(254, 201, 74, 1);
+                1px 0 0 rgba(68, 68, 68, 1),
+                -1px 0 0 rgba(68, 68, 68, 1),
+                0 1px 0 rgba(68, 68, 68, 1),
+                0 -1px 0 rgba(68, 68, 68, 1);
         }
 
         .filter-btn.active::before {
