--- a/projects.html
+++ b/projects.html
@@ -174,8 +174,8 @@
         }
 
         .filter-btn {
-            font-family: 'Doto', monospace;
-            font-size: 28px;
+            font-family: 'Courier New', monospace;
+            font-size: 18px;
             font-weight: 900;
             background: none;
             border: none;
